[gd_scene load_steps=7 format=3 uid="uid://bn7318wvrq23k"]

[ext_resource type="Script" uid="uid://b8o7vb4xcrfo3" path="res://scripts/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://v76tcm1wvpvn" path="res://assets/textures/bg.png" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://cecym537wkivp" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://3jckunrtyha8" path="res://scenes/enemy_spawner.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://caed2udak01yo" path="res://scenes/hud.tscn" id="5_iywne"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbhrr"]
size = Vector2(720, 78)

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Background" type="TextureRect" parent="."]
offset_right = 720.0
offset_bottom = 800.0
texture = ExtResource("1_uwrxv")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(352, 635)

[node name="EnemySpawner" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(4, -19)

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(359, 865)
shape = SubResource("RectangleShape2D_lbhrr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_iywne")]
offset_left = 122.772
offset_top = 15.9618
offset_right = 122.772
offset_bottom = 15.9618

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
